--- a/ccl/Makefile.in
+++ b/ccl/Makefile.in
@@ -31,7 +31,8 @@ cdudir = $(top_builddir)/cdu
 CDU = $(cdudir)/cdu
 
 ccl_commands.c:	ccl_commands.ocld
-	env @LIBPATH@=@MAKESHLIBDIR@ $(CDU) < ccl_commands.ocld
+	if [ "@LIBPATH@" == "PATH" ]; then env PATH="@MAKESHLIBDIR@:$$(dirname $$(which gcc))" $(CDU) < ccl_commands.ocld;\
+              else env @LIBPATH@=@MAKESHLIBDIR@ $(CDU) < ccl_commands.ocld; fi
 	$(MAKE) depend
 
 @MAKESHLIBDIR@libccl_commands@SHARETYPE@:	$(OBJECTS)
