--- a/include/config.h.in
+++ b/include/config.h.in
@@ -138,6 +138,9 @@
 /* Define if you have the <windows.h> header file. */
 #undef HAVE_WINDOWS_H
 
+/* Define if you have the <pthread.h> header file. */
+#undef HAVE_PTHREAD_H
+
 /* Define if you have pthread_lock_global_np routine. */
 #undef HAVE_PTHREAD_LOCK_GLOBAL_NP
 
