--- a/rtevents/Makefile.in
+++ b/rtevents/Makefile.in
@@ -3,11 +3,17 @@ include @top_srcdir@/Makefile.inc
 LD=@CXX@
 CFLAGS=@CFLAGS@ @SRBINCLUDE@ -fPIC 
 CXXFLAGS=-g -O2 -Wno-deprecated -fPIC @CFLAGS@
-LIBS=-L@MAKESHLIBDIR@ @LIBS@ @SRBLIB@ -lMdsIpShr -lMdsShr
+LIBS=-L@MAKESHLIBDIR@ @LIBS@ @SRBLIB@ -lMdsIpShr -lMdsShr @SOCKETLIB@
 
+ifeq "@MINGW@" "yes"
+  WIN_CXXSOURCES = WindowsSharedMemory.cpp
+else
+  WIN_CXXSOURCES =
+endif
 CXXSOURCES = \
 	AllocationManager.cpp EventManager.cpp RelativePointer.cpp Event.cpp\
-	ExitHandler.cpp TCPNetworkManager.cpp UDPNetworkManager.cpp EventHandler.cpp Notifier.cpp Thread.cpp
+	ExitHandler.cpp TCPNetworkManager.cpp UDPNetworkManager.cpp EventHandler.cpp Notifier.cpp Thread.cpp $(WIN_CXXSOURCES)
+
 SOURCES = MdsEvents.c
 OBJECTS = $(CXXSOURCES:.cpp=.o)  $(SOURCES:.c=.o)
 EXPORTS = RtEventsShr.exports
