--- a/tditest/Makefile.in
+++ b/tditest/Makefile.in
@@ -20,7 +20,7 @@ clean :
 	@ $(RM) @MAKEBINDIR@tditest
 
 @MAKEBINDIR@tditest : $(OBJECTS)
-	$(CC) -o $@ $(OBJECTS) $(CFLAGS) @CC_LDFLAGS@ -L@MAKESHLIBDIR@ -lTdiShr -lTreeShr -lMdsShr $(LIBS)
+	$(CC) -o $@ $(OBJECTS) $(CFLAGS) @CC_LDFLAGS@ -L@MAKESHLIBDIR@ -lTdiShr -lTreeShr -lMdsShr $(LIBS) @SOCKETLIB@
 
 @MAKEBINDIR@ :
 	mkdir @MAKEBINDIR@
