--- a/servershr/Makefile.in
+++ b/servershr/Makefile.in
@@ -45,7 +45,7 @@ install:
 	fi;
 
 @MAKESHLIBDIR@libMdsServerShr@SHARETYPE@ : $(OBJECTS) 
-	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) -L@MAKESHLIBDIR@ -lMdsdcl -lTdiShr -lTreeShr -lMdsShr -lMdsIpShr $(LIBS) $(LDFLAGS)
+	$(LD) -o $@ @LINKSHARED@ $(OBJECTS) -L@MAKESHLIBDIR@ -lMdsdcl -lTdiShr -lTreeShr -lMdsShr -lMdsIpShr $(LIBS) $(LDFLAGS) @SOCKETLIB@
 
 @MAKELIBDIR@libMdsServerShr.a : $(OBJECTS)
 	$(AR) -cr $@ $(OBJECTS)
