Set pthread option correctly

--- a/configure.in
+++ b/configure.in
@@ -293,7 +293,7 @@ CC_LDFLAGS=""
 FOR_LDFLAGS=""
 MINGW="no"
 
-LIBPTHREAD=-lpthread
+LIBPTHREAD=-pthread
 IS_HP=0
 MITDEVICESIO_TARGETS=""
 GEN_DEVICE=gen_device
