--- a/configure.in
+++ b/configure.in
@@ -376,11 +376,10 @@ mips*) CFLAGS="$CFLAGS -signed -D_BSD_SIGNALS -KPIC";
        SOCKETLIB="-lws2_32"
        CFLAGS="$CFLAGS -fpic -static-libgcc -fno-strict-aliasing";
        LD="gcc"
-       CFLAGS="$CFLAGS -m64"
-       LD="gcc -m64 -static-libgcc"
-       FFLAGS="$FFLAGS -m64 -fno-range-check"
+       LD="gcc -static-libgcc"
+       FFLAGS="$FFLAGS -fno-range-check"
        LOC="loc"
-       FORLD="gfortran -m64 -static-libgcc"
+       FORLD="gfortran -static-libgcc"
        BINDIR=bin_x86_64
        MAKELIBDIR="\$(top_srcdir)/$BINDIR"
        MAKESHLIBDIR="\$(top_srcdir)/$BINDIR/"
