--- a/mdsdcl/Makefile.in
+++ b/mdsdcl/Makefile.in
@@ -29,14 +29,9 @@ EXPORTS = mdsdclshr.export
 all:	@MAKELIBDIR@ @MAKEBINDIR@ @MAKELIBDIR@libMdsdcl.a  @MAKESHLIBDIR@libMdsdcl@SHARETYPE@ @MAKEBINDIR@mdsdcl
 
 clean:
-	@ $(RM) $(OBJECTS) mdsdcl.o
-	@ $(RM) mdsdcl_tables.c
-	@ $(RM) @MAKELIBDIR@libMdsdcl.a
-	@ $(RM) @MAKESHLIBDIR@libMdsdcl@SHARETYPE@
-	@ $(RM) @MAKEBINDIR@mdsdcl
-	ifdef IMPLIB
-	@ $(RM) $(IMPLIB)
-	endif
+	$(RM) $(OBJECTS) mdsdcl.o
+	$(RM) mdsdcl_tables.c
+	$(RM) @MAKELIBDIR@libMdsdcl.a @MAKESHLIBDIR@libMdsdcl@SHARETYPE@ @MAKEBINDIR@mdsdcl $(IMPLIB)
 
 depend: 
 	 @makedepend -- $(CFLAGS) -- $(SOURCES) mdsdcl.c
