--- a/configure.in
+++ b/configure.in
@@ -291,6 +291,9 @@ CC_LDFLAGS=""
 FOR_LDFLAGS=""
 MINGW="no"
 
+THREAD=-pthread
+AC_SUBST(THREAD)
+
 LIBPTHREAD=-pthread
 IS_HP=0
 MITDEVICESIO_TARGETS=""
