--- a/rtevents/Makefile.in
+++ b/rtevents/Makefile.in
@@ -1,8 +1,8 @@
 include @top_srcdir@/Makefile.inc
 
 LD=@CXX@
-CFLAGS=@CFLAGS@ @SRBINCLUDE@ -fPIC 
-CXXFLAGS=-g -O2 -Wno-deprecated -fPIC @CFLAGS@
+CPPFLAGS += @SRBINCLUDE@
+CXXFLAGS = $(CFLAGS) $(THREAD) -Wno-deprecated
 LIBS=-L@MAKESHLIBDIR@ @LIBS@ @SRBLIB@ -lMdsIpShr -lMdsShr @SOCKETLIB@
 
 CXXSOURCES = \
@@ -41,7 +41,7 @@ install:
 	fi;
 
 $(RtEventsShr_shared): $(OBJECTS) @EXPORTS_FILE@ 
-	$(LD) -o $@ $(CXXFLAGS) @LINKSHARED@ $^ $(LIBS)
+	$(LD) -o $@ $(CXXFLAGS) @LINKSHARED@ $^ $(LIBS) $(THREAD)
 
 $(RtEventsShr_static): $(OBJECTS)
 	$(AR) -cr $@ $^
@@ -51,9 +51,8 @@ $(RtEventsShr_static): $(OBJECTS)
 	$(MKDIR_P) $@
 
 $(EventConnector): $(RtEventsShr_shared)
-	$(CXX) -o $@ $(CXXFLAGS) EventConnector.cpp -L@MAKESHLIBDIR@ -lRtEventsShr $(LIBS) @NSLLIB@
+	$(CXX) -o $@ $(CXXFLAGS) EventConnector.cpp -L@MAKESHLIBDIR@ -lRtEventsShr $(THREAD) $(LIBS) @NSLLIB@
 
 
 RtEventsShr.exports: RtEventsShr.def
 	sed -e /LIBRARY/\;/\;/d RtEventsShr.def > $@
-
