--- a/mdslib/Makefile.in
+++ b/mdslib/Makefile.in
@@ -57,10 +57,10 @@ MdsLib_client.o : MdsLib.c
 	$(COMPILE.c) $< $(OUTPUT_OPTION) -D_CLIENT_ONLY
 
 @MAKEBINDIR@dtype_test : dtype_test.c
-	$(COMPILE.c) $< $(OUTPUT_OPTION) @CC_LDFLAGS@ -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS)
+	$(LINK.c) $(OUTPUT_OPTION) $^ -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS)
 
 @MAKEBINDIR@mdslib_ctest : mdslib_ctest.c
-	$(COMPILE.c) $< $(OUTPUT_OPTION) @CC_LDFLAGS@ -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) @LIBM@ $(GLOBUS_LDFLAGS)
+	$(LINK.c) $(OUTPUT_OPTION) $^ -L@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) @LIBM@ $(GLOBUS_LDFLAGS)
 
 @MAKEBINDIR@mdslib_ftest : mdslib_ftest.f
 	$(LINK.F) $(OUTPUT_OPTION) $^ @FEXECLIBDIR@@MAKESHLIBDIR@ -lMdsLib -lMdsIpShr $(MDSLIB_LIBS) $(LIBS) $(GLOBUS_LDFLAGS)
